--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -195,6 +195,11 @@ input[type="submit"],
   cursor: pointer;
 }
 
+.error-message {
+  width: fit-content;
+  margin: 16px auto;
+}
+
 #introduction {
   display: flex;
   align-items: center;
@@ -235,6 +240,11 @@ input[type="submit"],
 .gallery img {
   width: 100%;
 }
+
+.gallery .error-message {
+  grid-column: 1 / -1;
+}
+
 #contact,
 #login {
   width: 50%;
@@ -304,7 +314,7 @@ footer nav ul {
   visibility: hidden;
 }
 
-/* Home Page */
+/* Filters  */
 
 .filters {
   margin-top: 30px;
