Résoudre problèmes relatifs à la navigation dans la modale

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -436,6 +436,10 @@ footer nav ul {
   border: none;
 }
 
+.modal-topbar .error-message {
+  margin-bottom: 0;
+}
+
 button.modal-back {
   font-size: 24px;
   visibility: hidden;
