Corriger type d'event pour vérifier les champs de saisie dans la modale : 'input' et non 'change'

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -194,7 +194,7 @@ a {
 
 a:hover,
 button:hover,
-input[type="submit"],
+input[type="submit"]:not(:disabled):hover,
 .upload-container label:hover {
   cursor: pointer;
 }
