--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -181,9 +181,11 @@ nav li {
   color: black;
 }
 
-nav li:hover {
+nav li:hover,
+.modify:hover,
+.modify:hover .fa-regular {
   cursor: pointer;
-  color: #b1663c;
+  color: #0e2f28;
   font-weight: 700;
 }
 
@@ -278,8 +280,8 @@ input[type="submit"]:not(:disabled):hover,
   flex-direction: column;
 }
 
-#contact input,
-#login input,
+#contact input:not([type="submit"]),
+#login input:not([type="submit"]),
 .modal input,
 .modal select,
 .modal-form .button-next {
@@ -314,6 +316,13 @@ input[type="submit"],
   width: 180px;
   text-align: center;
   border-radius: 60px;
+  border: none;
+  transition: 0.2s ease-in-out;
+}
+
+input[type="submit"]:hover,
+.modal-form .button-next:hover {
+  background-color: #0e2f28;
 }
 
 footer nav ul {
@@ -359,6 +368,7 @@ footer nav ul {
   color: #1d6154;
   border: 1px solid #1d6154;
   border-radius: 60px;
+  transition: 0.2s ease-out;
 }
 
 .filters a:hover,
@@ -451,6 +461,11 @@ footer nav ul {
   background: none;
   border: none;
   border-radius: 2px;
+}
+
+.modal-close:hover .fa-solid,
+.modal-back:hover .fa-solid {
+  color: #1d6154;
 }
 
 .modal-topbar .error-message {
@@ -556,8 +571,8 @@ button.modal-back {
 }
 
 .upload-container input {
-  opacity: 0;
-  height: 0;
+  position: absolute;
+  left: -100vw;
 }
 
 .upload-container .icon-wrapper {
@@ -582,4 +597,13 @@ button.modal-back {
 
 input.button-add:disabled {
   background-color: #cbd6dc;
+}
+
+/* Page Login */
+
+.login-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
