--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -128,7 +128,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 /** end reset css**/
+
 body {
   font-family: "Work Sans";
   font-size: 14px;
@@ -143,6 +145,10 @@ header {
   display: flex;
   justify-content: space-between;
   margin: 50px 0;
+}
+
+main {
+  padding: 0 100px;
 }
 
 section {
@@ -170,11 +176,14 @@ h2 {
   font-size: 30px;
   color: #1d6154;
 }
+
 nav ul {
   display: flex;
   align-items: center;
+  gap: 2em;
   list-style-type: none;
 }
+
 nav li {
   padding: 0 10px;
   font-size: 1.2em;
@@ -187,6 +196,11 @@ nav li:hover,
   cursor: pointer;
   color: #0e2f28;
   font-weight: 700;
+}
+
+nav li:last-child img {
+  height: 22px;
+  width: 22px;
 }
 
 a {
@@ -204,18 +218,21 @@ input[type="submit"]:not(:disabled):hover,
 .error-message {
   width: fit-content;
   margin: 16px auto;
+  color: #dc143c;
 }
 
 #introduction {
   display: flex;
   align-items: center;
 }
+
 #introduction figure {
   flex: 1;
 }
+
 #introduction img {
   display: block;
-  margin: auto;
+  /* margin: auto; */
   width: 80%;
 }
 
@@ -228,12 +245,8 @@ input[type="submit"]:not(:disabled):hover,
 
 #introduction p {
   margin-bottom: 0.5em;
+  line-height: 1.2rem;
 }
-
-/* #portfolio h2 {
-  text-align: center;
-  margin-bottom: 1em;
-} */
 
 #portfolio {
   margin-bottom: 75px;
@@ -396,13 +409,31 @@ footer nav ul {
 
 /* Page Login */
 
+.login-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 #login .link {
-  text-align: center;
+  width: fit-content;
+  margin: 0 auto;
   text-decoration: underline;
 }
 
+#login .link:hover {
+  font-weight: 700;
+}
+
 #login .error-message {
-  height: 50px;
+  height: 3em;
+  line-height: 2em;
+  margin: 0;
+}
+
+#login input[type="submit"] {
+  margin-top: 0;
 }
 
 /* Topbar */
@@ -597,13 +628,4 @@ button.modal-back {
 
 input.button-add:disabled {
   background-color: #cbd6dc;
-}
-
-/* Page Login */
-
-.login-container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
