--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -608,15 +608,30 @@ button.modal-back {
   border-bottom: 1px solid #b3b3b3;
 }
 
-.upload-container {
+.fields-container * {
   box-sizing: border-box;
+}
+
+.fields-container svg {
+  display: none;
+  height: 18px;
+  width: 18px;
+  stroke: #1d6154;
+  stroke-width: 3;
+  position: absolute;
+  right: -10%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.upload-container {
   background-color: #e8f1f6;
   border-radius: 3px;
   height: 170px;
+  position: relative;
 }
 
 .upload-file {
-  box-sizing: inherit;
   height: 100%;
   padding: 15px 20px 20px 20px;
   display: flex;
@@ -678,12 +693,17 @@ button.modal-back {
 .fields-container input,
 .fields-container select {
   font-size: 14px;
+  width: 100%;
 }
 
 .fields-container select {
   padding: 0;
   border-left: 16px solid white;
   border-right: 16px solid white;
+}
+
+.input-container {
+  position: relative;
 }
 
 input.button-add:disabled {
