--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -181,6 +181,7 @@ h2 {
 }
 
 nav ul {
+  height: 100%;
   display: flex;
   align-items: center;
   gap: 2em;
@@ -191,13 +192,24 @@ nav li {
   padding: 0 10px;
   font-size: 16px;
   color: black;
+  transition: 0.2s ease-in-out;
 }
 
-nav li:hover,
+nav li:not(.bold):hover {
+  cursor: pointer;
+  text-stroke: 1px black;
+  -webkit-text-stroke: 1px black;
+}
+
 .modify:hover,
 .modify:hover .fa-regular {
   cursor: pointer;
   color: #93532f;
+}
+
+nav li:last-child {
+  display: flex;
+  align-items: center;
 }
 
 nav li:last-child svg {
@@ -279,6 +291,8 @@ select {
 
 .gallery img {
   width: 100%;
+  height: 94%;
+  object-fit: cover;
 }
 
 .gallery figcaption {
@@ -335,6 +349,10 @@ select {
 
 #contact p {
   font-size: 16px;
+}
+
+#contact input[type="submit"] {
+  margin-top: 3em;
 }
 
 input[type="submit"],
@@ -439,7 +457,7 @@ footer nav ul {
   justify-content: space-between;
 }
 
-header a.bold {
+header li.bold {
   font-weight: 600;
 }
 
@@ -451,7 +469,7 @@ header a.bold {
 }
 
 #login .link:hover {
-  color: #93532f;
+  font-weight: 700;
 }
 
 #login .error-message {
@@ -482,6 +500,7 @@ header a.bold {
   gap: 8px;
   background-color: black;
   color: white;
+  font-size: 16px;
 }
 
 /* Modal */
@@ -556,13 +575,20 @@ button.modal-back {
 }
 
 .modal-form li {
+  height: 103px;
   position: relative;
   transition: 0.2s ease;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 .modal-form li:hover {
   cursor: pointer;
-  transform: scale(1.02);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
+  transform: scale(1.03);
+}
+
+.modal-form ul img {
+  height: 100%;
 }
 
 .modal-form img {
@@ -591,8 +617,6 @@ button.modal-back {
   display: block;
   width: 55%;
   margin-top: 36px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .modal-form .button-add.hidden {
@@ -700,6 +724,7 @@ button.modal-back {
 }
 
 .fields-container select {
+  background-color: white;
   padding: 0;
   border-left: 16px solid white;
   border-right: 16px solid white;
